--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Thermostat</title>
   </head>
   <body>
+    <script src="jquery.js"></script>
+    <script src="interface.js"></script>
     <section>
       <h1 id="temperature"></h1>
       <p>
@@ -15,5 +17,6 @@
         <button id="powersaving-off">PSM off</button>
       </p>
     </section>
+    <script src="src/Thermostat.js"></script>
   </body>
 </html>
