--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <button id="temperature-decrease">-</button>
         <button id="temperature-reset">reset</button>
         power saving mode is <span id="power-saving-status">on</span>
-        <button id="powersaving-on">PSM on</button>
-        <button id="powersaving-off">PSM off</button>
+        <button id="powersaving">Power Saving Mode</button>
       </p>
     </section>
     <script src="src/Thermostat.js"></script>
