fixes merge issues by copying code directly from pair's codebase

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
 
     <div class="temperature-display">
-      <!-- Placeholder for temperature display -->
+      Placeholder for temperature display
     </div>
 
-    <div class="energy-usage">
+    <div id="energy-usage">
       Placeholder for current energy usage
     </div>
 
@@ -19,7 +19,8 @@
     <button type="button" id="down">Down</button>
     <button type="reset" id="reset">Reset</button>
 
-    <button type="button" id="power-saving">Power Saving</button>
+    <button type="button" id="power-saving">Power Saving On</button>
+    <button type="button" id="power-hungry">Power Saving Off</button>
 
     <script src="src/thermostat.js"></script>
     <script src="jquery.js"></script>
