Added CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Thermostat</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets.css">
   </head>
   <body>
     <script src="jquery.js"></script>
