--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="interface.js"></script>
     <section>
       <h1 id="temperature"></h1>
+      <h1>Current outside temperature: <span id="outside-temperature"></span></h1>
       <p>
         <button id="temperature-increase">+</button>
         <button id="temperature-decrease">-</button>
